--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
           <article id="main-cont">
               <aside id="sidecont">
                 <div class="dark">
-                  <form class="email">
+                  <form action="mailto:jeralyn03@gmail.com">
                     <h3>Get In Touch</h3>
                     <div>
                       <label>Name</label><br>
@@ -48,7 +48,7 @@
                           <label>Message</label><br>
                           <textarea placeholder="Message"></textarea>
                         </div>
-                        <button class"button_1" type "submit"><a href="mailto:jeralyn03@gmail.com">Send</button></a>
+                        <button class"button_1" type "submit">Send</button></a>
                       </form>
                 </div>
               </aside>
