--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
           <article id="main-cont">
               <aside id="sidecont">
                 <div class="dark">
-                  <form action="mailto:jeralyn03@gmail.com">
+                  <form class="email">
                     <h3>Get In Touch</h3>
                     <div>
                       <label>Name</label><br>
