--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                           <label>Message</label><br>
                           <textarea placeholder="Message"></textarea>
                         </div>
-                        <button class"button_1" type "submit">Send</button></a>
+                        <button class"button_1" type "submit"><a href="mailto:jeralyn03@gmail.com">Send</button></a>
                       </form>
                 </div>
               </aside>
