--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
           Combined Computer Science and Psychology. I first pursued a Psychology degree,
         but later found an interest for coding. This website is my first personal project.
           It has been quite a rollercoaster trying to discover what I want to achieve for my career goals.
-        I have finally decided that I want to pursue a career in UX/UI design. This is would ideal. I would love
+        I have finally decided that I want to pursue a career in UX/UI design. This is would be ideal. I would love
       to apply my growing knowledge of computer science and psychology to projects where I can express myself more
     artistically. I enjoy human interaction, creativity, and logic, so it really completes
   everything I love.</p>
