--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
                 I am pursuing a Bachelor of Science in Combined Computer Science and Psychology.
                 Coding has been a new interest for me, but it deems rewarding. I am taking the next few steps in life
                 to expand my knowledge and grow as a developer.To sum me up in a few words, I'd say that I am a happy-go-lucky girl who goes with the flow.
-                A free bird &#x1f426; if you will.
                 If you would like to know more, please feel free to explore my <a href="about.html">about</a> page. </p>
-                <p><b>Be Kind Whenever Possible. It Is Always Possible</b>.</p>
-                  <p>-Dalai Lama</p>
+                <p><b>Be Kind Whenever Possible. It Is Always Possible</b>.<br>-Dalai Lama</p>
           </article>
           <aside id="sidebar">
               <div class="boxi">
