--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 Coding has been a new interest for me, but it deems rewarding. I am taking the next few steps in life
                 to expand my knowledge and grow as a developer.To sum me up in a few words, I'd say that I am a happy-go-lucky girl who goes with the flow.
                 If you would like to know more, please feel free to explore my <a href="about.html">about</a> page. </p>
-                <p><b>Be Kind Whenever Possible. It Is Always Possible</b>.<br>-Dalai Lama</p>
+		  <p><b><em>Be Kind Whenever Possible. It Is Always Possible</b>.<br>-Dalai Lama</em></p>
           </article>
           <aside id="sidebar">
               <div class="boxi">
