--- a/about.html
+++ b/about.html
@@ -64,8 +64,9 @@
               <ul>
                 <li>Reading</li>
                 <li>Writing</li>
-                <li>Movies/Shows</li>
+                <li>Creating</li>
                 <li>Music</li>
+                <li>Coding</li>
                 <li>Painting</li>
               </ul>
             </div>
