--- a/contact.html
+++ b/contact.html
@@ -36,19 +36,8 @@
                 <div class="dark">
                   <form class="email">
                     <h3>Get In Touch</h3>
-                    <div>
-                      <label>Name</label><br>
-                        <input type="text" placeholder="Name">
-                    </div>
-                      <div>
-                          <label>Email</label><br>
-                          <input type="email" placeholder="Email Address">
-                        </div>
-                        <div>
-                          <label>Message</label><br>
-                          <textarea placeholder="Message"></textarea>
-                        </div>
-                        <button class"button_1" type "submit"><a href="mailto:jeralyn03@gmail.com">Send</button></a>
+                      <p>Jeralyn Javier<br>Victoria, BC</br>Jeralyn03@gmail.com | 250-415-3482</p>
+                      <button class"button_1" type "submit"><a href="mailto:jeralyn03@gmail.com">Send</button></a>
                       </form>
                 </div>
               </aside>
